# setup.cfg


[metadata]
name = pysui_gadgets
version = attr: pysui_gadgets.__version__
author = fastfrank
description = SUI client Python SDK Gadgets
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/FrankC01/pysui_gadgets
license_files = LICENSE
keywords= software development kit, sui, blockchain
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
requires_python = >=3.10

[options]
packages = find:
zip_safe = True
install_requires =
    pysui == 0.3.0


[options.packages.find]
exclude =
    temp*
    test*
	tools*

[options.entry_points]
console_scripts =
    package = pysui_gadgets.package.package:main
    dsl-gen = pysui_gadgets.dsl.dslgen:main

[project_urls]
"Bug Tracker" = https://github.com/FrankC01/pysui_gadgets/issues